<resources>
    <string name="app_name">Homey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_energy">Energy</string>
    <string name="action_water">Water</string>
    <string name="action_camera">Camera</string>
    <string name="action_weather">Weather</string>
    <string name="action_statistics">Statistics</string>



    <string name="menu_home">Home</string>
    <string name="menu_energy">Energy</string>
    <string name="menu_water">Water</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>