<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_energy"
        android:orderInCategory="3"
        android:title="@string/action_energy"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_water"
        android:orderInCategory="4"
        android:title="@string/action_water"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_camera"
        android:orderInCategory="5"
        android:title="@string/action_camera"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_gallery"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>