<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fredrikrenander.homey.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fredrikrenander.homey.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fredrikrenander.homey.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <action android:id="@+id/action_global_nav_home" app:destination="@id/nav_home" />
    <action android:id="@+id/action_global_nav_gallery" app:destination="@id/nav_gallery" />
    <action android:id="@+id/action_global_nav_slideshow" app:destination="@id/nav_slideshow" />
    <fragment
        android:id="@+id/nav_energy"
        android:name="com.fredrikrenander.homey.ui.energy.EnergyFragment"
        android:label="@string/menu_energy"
        tools:layout="@layout/energy_fragment" />
    <fragment
        android:id="@+id/nav_water"
        android:name="com.fredrikrenander.homey.ui.water.WaterFragment"
        android:label="@string/menu_water"
        tools:layout="@layout/water_fragment" />
</navigation>